--- a/_includes/offers.html
+++ b/_includes/offers.html
@@ -1,7 +1,7 @@
 {% assign offers = site.data.offers | sort: 'saved' | reverse %}
 {% assign offer-type = include.type %}
 
-<div class="row">
+<div class="row offers">
   {% for offer in offers %}
     {% include offer.html %}
   {% endfor %}
