--- a/_includes/partner-logo.html
+++ b/_includes/partner-logo.html
@@ -1,1 +1,1 @@
-<a class="logo logo--partner" href="#link" id="tracking-partner-logo"><img class="logo--partner--img" src="{{ site.baseurl }}/img/logo/partner.png" alt="MGM Resort Logo"></a>
+<a class="logo logo--partner" href="https://visitgreaterpalmsprings.com/" id="tracking-partner-logo"><img class="logo--partner--img" src="{{ site.baseurl }}/img/logo/partner.png" alt="Greater Palm Springs Logo"></a>
