--- a/_sass/_modal.scss
+++ b/_sass/_modal.scss
@@ -43,7 +43,7 @@ $icon-size: 3em;
   }
   &__content {
     margin: auto;
-    color: $text-black;
+    // color: $text-black;
     background-color: $white;
     &--padding{
       padding: $margin ($margin/1.5);
