--- a/_includes/core-navigation.html
+++ b/_includes/core-navigation.html
@@ -1,4 +1,4 @@
-<li class="{{include.block}}__item"><a class="{{include.block}}__link" href="https://www.secretescapes.com/current-sales">Current Sales</a></li>
-<li class="{{include.block}}__item"><a class="{{include.block}}__link" href="https://www.secretescapes.com/smartstays/filter">Smart Stays</a></li>
-<li class="{{include.block}}__item"><a class="{{include.block}}__link" href="https://www.secretescapes.com/spa">Spa</a></li>
+<li class="{{include.block}}__item"><a class="{{include.block}}__link" href="https://us.secretescapes.com/current-sales">Current Sales</a></li>
+<li class="{{include.block}}__item"><a class="{{include.block}}__link" href="https://us.secretescapes.com/top-destinations">Top Destinations</a></li>
+<li class="{{include.block}}__item"><a class="{{include.block}}__link" href="https://us.secretescapes.com/salamander-summer-sale/filter">Summer Sale</a></li>
 <li class="{{include.block}}__item"><a class="{{include.block}}__link {{include.block}}__link--current" href="{{ site.baseurl }}">{{site.title}}</a></li>
