--- a/_includes/microsite-nav.html
+++ b/_includes/microsite-nav.html
@@ -1,11 +1,11 @@
 <div class="site-nav">
   <div class="row">
     <ul class="site-nav__list">
-      <li class="site-nav__item site-nav__item--dining"><a class="site-nav__link" href="#health-wellness">Health & Wellness</a></li
-     ><li class="site-nav__item site-nav__item--spa"><a class="site-nav__link" href="#dining-drinks">Dining & Drinks</a></li
-     ><li class="site-nav__item site-nav__item--entertainment"><a class="site-nav__link" href="#arts-culture">Arts & Culture</a></li
-     ><li class="site-nav__item site-nav__item--upgrades"><a class="site-nav__link" href="#outdoor-adventure">Outdoor Adventure</a></li
-     ><li class="site-nav__item site-nav__item--offers"><a class="site-nav__link" href="#offers">Offers</a></li>
+      <li id="tracking-nav-health-wellness" class="site-nav__item site-nav__item--dining"><a class="site-nav__link" href="#health-wellness">Health & Wellness</a></li
+     ><li id="tracking-nav-dining-drinks" class="site-nav__item site-nav__item--spa"><a class="site-nav__link" href="#dining-drinks">Dining & Drinks</a></li
+     ><li id="tracking-nav-outdoor-adventure" class="site-nav__item site-nav__item--upgrades"><a class="site-nav__link" href="#outdoor-adventure">Outdoor Adventure</a></li
+     ><li id="tracking-nav-arts-culture" class="site-nav__item site-nav__item--entertainment"><a class="site-nav__link" href="#arts-culture">Arts & Culture</a></li
+     ><li id="tracking-nav-offers" class="site-nav__item site-nav__item--offers"><a class="site-nav__link" href="#offers">Offers</a></li>
     </ul>
   </div><!-- END - .row -->
 </div><!-- END - .site-nav -->
