--- a/_sass/_core.scss
+++ b/_sass/_core.scss
@@ -43,15 +43,15 @@ $se-dark-grey-5:  rgba(41,39,40,.5);
 $se-dark-grey-66: rgba(41,39,40,.66);
 $se-dark-grey-85: rgba(41,39,40,.85);
 
-$partner-primary:   #6dccea;
-$partner-secondary: #50679e;
+$gps-turquoise:    #45bdc6;
+$gps-blue:         #0d6d7e;
+$gps-blue-light:   #c9dce2;
 
-$text-black:      #0d0d0d;
+$text-black:      #4d4d4d;
+$text-grey:       #808080;
 $text-white:      #d9d9d9;
 $text-heading:    #0d0d0d;
-$text-paragraph:  #5f5f5f;
-
-.text-white { color: $text-white; }
+$text-paragraph:  #47484a;
 
 
 // -------- breakpoints --------
