--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -145,8 +145,9 @@ $nav-arrow-width: 66px;
   letter-spacing: .225em;
   line-height: (($site-nav-height/1.4)+1);
   text-transform: uppercase;
-  background-color: #232833;
-  background-color: rgba(#232833,.85);
+  color: $gps-blue;
+  background-color: $white;
+  background-color: rgba($white,.9);
   overflow: hidden;
   &__list {
     padding-right: $nav-arrow-width;
@@ -164,12 +165,12 @@ $nav-arrow-width: 66px;
       display: block;
       width: $nav-arrow-width;
       height: ($site-nav-height/1.4);
-      background-image: url("../img/icons/nav-arrow-dark.png");
+      background-image: url("../img/icons/nav-arrow-light.png");
       background-position: center;
       background-repeat: no-repeat;
       background-size: $nav-arrow-width auto;
     }
-    @include bp(medium){
+    @include bp(xxlarge){
       // remove the prompt for sideways scroll
       padding-right: 0;
       overflow: visible;
@@ -179,16 +180,13 @@ $nav-arrow-width: 66px;
   &__item {
     display: inline-block;
     white-space: nowrap;
-    border-left: .5px solid rgba($white,.15);
+    border-left: 1px solid $gps-blue-light;
     @include transition;
-    &:last-of-type { border-right: .5px solid rgba($white,.15); }
+    &:last-of-type { border-right: 1px solid $gps-blue-light; }
     &--flights { background-color: #0e1c3a; }
     &:hover {
-      background-color: #0e121b;
-      border-color: #0e121b;
+      background-color: $gps-blue-light;
     }
-    // changes neighbour item border
-    &:hover + & { border-color: #0e121b; }
   }
   &__link {
     display: inline-block;
@@ -197,7 +195,7 @@ $nav-arrow-width: 66px;
     &:hover,
     &--current { text-decoration: none; }
   }
-  @include bp(medium){
+  @include bp(xxlarge){
     height: $site-nav-height;
     line-height: ($site-nav-height+1);
     .flexbox & {
@@ -292,7 +290,7 @@ $mobile-nav-width: 75%;
 
 // ---------- SITE FOOTER ----------
 .footer {
-  background-color: $black-85;
+  background-color: $black;
   &__logos {
     font-size: .9em;
     border-top: 1px solid $white-15;
